--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,7 @@ compiler:
 
 install: true
 
-before_script: 
-  - ls
+#before_script: 
 
 # If script returns a non-zero exit code, the build is failed, but continues to run before being marked as failed.
 
